Fixed title block spacing on mobile

--- a/dustedits.css
+++ b/dustedits.css
@@ -1,5 +1,5 @@
 html,body {font-size: 10pt; font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New,monospace;}
-body {margin-left: 50px; max-width: 101ex; background-color:wheat; margin-top:390px}
+body {margin-left: 50px; max-width: 101ex; background-color:wheat; margin-top:30em}
 
 h1,h2,h3,h4,h5,h6 {font-family: Consolas,"Helvetica", "sans-serif"}
 h1 {margin-left: -30px; margin-bottom: .2em; font-family:"Helvetica", "sans-serif"}
